<?xml version="1.0"?>
<package format="2">
  <name>my_robot_localization</name>
  <version>0.0.0</version>
  <description>The my_robot_localization package</description>

  <maintainer email="chehabi.mohammed@gmail.com">chehabi</maintainer>

  <license>BSD</license>

  <!-- Specify dependencies required for your package -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- Export tag can contain additional information if needed -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

