<?xml version="1.0"?>
<package format="2">
  <name>robot_kinematic</name>
  <version>0.1.0</version>
  <description>The robot_kinematic package</description>
  
  <maintainer email="chehabi.mohammed@gmail.com">chehabi</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>tf</build_depend>
  <depend>nav_msgs</depend>

</package>

